// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigurationMap renders default 1`] = `
<div
  data-cy="configurationMap"
>
  <dl
    class="css-n7t6tv"
    data-cy="configurationMapSection"
  >
    <div
      class="css-azki39"
      data-cy="configurationMapRow"
    >
      <dt
        class="css-rs2f7e"
        data-cy="configurationMapLabel"
      >
        Name
      </dt>
      <dd
        class="css-gvvllw"
        data-cy="configurationMapValue"
      >
        Jane Doe
      </dd>
    </div>
    <div
      class="css-azki39"
      data-cy="configurationMapRow"
    >
      <dt
        class="css-rs2f7e"
        data-cy="configurationMapLabel"
      >
        Role
      </dt>
      <dd
        class="css-gvvllw"
        data-cy="configurationMapValue"
      >
        UX Designer
      </dd>
    </div>
    <div
      class="css-azki39"
      data-cy="configurationMapRow"
    >
      <dt
        class="css-rs2f7e"
        data-cy="configurationMapLabel"
      >
        City
      </dt>
      <dd
        class="css-gvvllw"
        data-cy="configurationMapValue"
      >
        San Francisco
      </dd>
    </div>
  </dl>
</div>
`;

exports[`ConfigurationMap renders with actions 1`] = `
<div
  data-cy="configurationMap"
>
  <dl
    class="css-n7t6tv"
    data-cy="configurationMapSection"
  >
    <div
      class="css-f05u7u"
      data-cy="configurationMapRow"
    >
      <dt
        class="css-rs2f7e"
        data-cy="configurationMapLabel"
      >
        Name
      </dt>
      <dd
        class="css-gvvllw"
        data-cy="configurationMapValue"
      >
        Jane Doe
      </dd>
      <span
        class="static_configurationMapRowAction css-48ylac"
        data-cy="configrationMapRowAction"
      >
        <button
          class="css-8g34zf"
          data-cy="secondaryButton"
          tabindex="0"
          type="button"
        >
          <span
            class=""
          >
            Action
          </span>
        </button>
      </span>
    </div>
    <div
      class="css-f05u7u"
      data-cy="configurationMapRow"
    >
      <dt
        class="css-rs2f7e"
        data-cy="configurationMapLabel"
      >
        Role
      </dt>
      <dd
        class="css-gvvllw"
        data-cy="configurationMapValue"
      >
        UX Designer
      </dd>
      <span
        class="static_configurationMapRowAction css-48ylac"
        data-cy="configrationMapRowAction"
      >
        <button
          class="css-8g34zf"
          data-cy="secondaryButton"
          tabindex="0"
          type="button"
        >
          <span
            class=""
          >
            Action
          </span>
        </button>
      </span>
    </div>
    <div
      class="css-f05u7u"
      data-cy="configurationMapRow"
    >
      <dt
        class="css-rs2f7e"
        data-cy="configurationMapLabel"
      >
        City
      </dt>
      <dd
        class="css-gvvllw"
        data-cy="configurationMapValue"
      >
        San Francisco
      </dd>
      <span
        class="static_configurationMapRowAction css-48ylac"
        data-cy="configrationMapRowAction"
      >
        <button
          class="css-8g34zf"
          data-cy="secondaryButton"
          tabindex="0"
          type="button"
        >
          <span
            class=""
          >
            Action
          </span>
        </button>
      </span>
    </div>
  </dl>
</div>
`;

exports[`ConfigurationMap renders with default value 1`] = `
<div
  data-cy="configurationMap"
>
  <dl
    class="css-n7t6tv"
    data-cy="configurationMapSection"
  >
    <div
      class="css-azki39"
      data-cy="configurationMapRow"
    >
      <dt
        class="css-rs2f7e"
        data-cy="configurationMapLabel"
      >
        Name
      </dt>
      <dd
        class="css-gvvllw"
        data-cy="configurationMapValue"
      >
        Jane Doe
      </dd>
    </div>
    <div
      class="css-azki39"
      data-cy="configurationMapRow"
    >
      <dt
        class="css-rs2f7e"
        data-cy="configurationMapLabel"
      >
        Role
      </dt>
      <dd
        class="css-gvvllw"
        data-cy="configurationMapValue"
      >
        —
      </dd>
    </div>
    <div
      class="css-azki39"
      data-cy="configurationMapRow"
    >
      <dt
        class="css-rs2f7e"
        data-cy="configurationMapLabel"
      >
        City
      </dt>
      <dd
        class="css-gvvllw"
        data-cy="configurationMapValue"
      >
        —
      </dd>
    </div>
  </dl>
</div>
`;

exports[`ConfigurationMap renders with headline 1`] = `
<div
  data-cy="configurationMap"
>
  <dl
    class="css-n7t6tv"
    data-cy="configurationMapSection"
  >
    <div
      class="css-4p29as"
      data-cy="configurationMapHeading"
    >
      <h1
        class="rmTextMargins css-ipvdfg"
        data-cy="headingText1"
      >
        Jane Doe Info
      </h1>
    </div>
    <div
      class="css-azki39"
      data-cy="configurationMapRow"
    >
      <dt
        class="css-rs2f7e"
        data-cy="configurationMapLabel"
      >
        Name
      </dt>
      <dd
        class="css-gvvllw"
        data-cy="configurationMapValue"
      >
        Jane Doe
      </dd>
    </div>
    <div
      class="css-azki39"
      data-cy="configurationMapRow"
    >
      <dt
        class="css-rs2f7e"
        data-cy="configurationMapLabel"
      >
        Role
      </dt>
      <dd
        class="css-gvvllw"
        data-cy="configurationMapValue"
      >
        UX Designer
      </dd>
    </div>
    <div
      class="css-azki39"
      data-cy="configurationMapRow"
    >
      <dt
        class="css-rs2f7e"
        data-cy="configurationMapLabel"
      >
        City
      </dt>
      <dd
        class="css-gvvllw"
        data-cy="configurationMapValue"
      >
        San Francisco
      </dd>
    </div>
  </dl>
</div>
`;
